Don't prevent whitespace wrapping in links/buttons, widen desktop pages (#3407)
Allowing whitespace to wrap solves the issue of long link/button text awkwardly breaking out of controls
Widening desktop "pages" prevents some unnecessary wrapping in places like the "Create account" button on the login screen, whose content is slightly wider than it should be (but this is currently masked by the `nowrap`)

Closes https://github.com/bitwarden/clients/issues/2620

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -99,7 +99,6 @@ button {
 }
 
 button {
-  white-space: nowrap;
   cursor: pointer;
 }
 
@@ -323,7 +322,6 @@ header {
         padding: 7px 0;
         text-decoration: none;
         font-size: 12px;
-        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         width: 100%;
