--- a/apps/browser/src/popup/scss/buttons.scss
+++ b/apps/browser/src/popup/scss/buttons.scss
@@ -5,7 +5,6 @@
   padding: 7px 15px;
   border: 1px solid #000000;
   font-size: $font-size-base;
-  white-space: nowrap;
   text-align: center;
   cursor: pointer;
 
