--- a/apps/desktop/src/scss/base.scss
+++ b/apps/desktop/src/scss/base.scss
@@ -85,7 +85,6 @@ button {
   border: none;
   background: transparent;
   color: inherit;
-  white-space: nowrap;
   cursor: pointer;
 }
 
