--- a/apps/desktop/src/scss/pages.scss
+++ b/apps/desktop/src/scss/pages.scss
@@ -54,7 +54,7 @@
 #lock-page,
 #update-temp-password-page {
   .content {
-    width: 300px;
+    width: 325px;
     transition: width 0.25s linear;
 
     p {
@@ -112,7 +112,7 @@
 
 #sso-page {
   .content {
-    width: 300px;
+    width: 325px;
 
     .box {
       margin-top: 30px;
