--- a/apps/web/src/scss/buttons.scss
+++ b/apps/web/src/scss/buttons.scss
@@ -191,7 +191,6 @@ button.no-btn {
   border: none;
   padding: 0;
   color: inherit;
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 
